--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "root",
     "password": "",
-    "database": "blogger",
+    "database": "flights_db",
     "host": "127.0.0.1",
     "port": 3306,
 
