--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/lindseybowen/Project_2#readme",
   "dependencies": {
+    "airport-autocomplete-js": "^2.1.4",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.1",
     "mysql": "^2.18.1",
