--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   "homepage": "https://github.com/lindseybowen/Project_2#readme",
   "dependencies": {
     "airport-autocomplete-js": "^2.1.4",
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.1",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
+    "path": "^0.12.7",
     "sequelize": "^6.5.0",
     "sequelizer": "^1.1.4"
   }
